<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="713dp"
            android:background="@drawable/bacground">

            <EditText
                android:id="@+id/et_firstname2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="100dp"
                android:background="@drawable/et_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/et_firstname2"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/et_birthdate2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_login"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:text="date"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner2" />


            <EditText
                android:id="@+id/et_repass2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/et_repass2"
                android:inputType="textPersonName"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_pass2" />


            <EditText
                android:id="@+id/et_email2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/et_email2"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_firstname2"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/et_uname2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/et_uname2"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email2" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/et_login"
                android:backgroundTint="@color/color1"
                android:entries="@array/country"
                android:gravity="center"
                android:scrollbarSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_repass2"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/et_pass2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_login"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/et_pass2"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_uname2" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="373dp"
                android:layout_height="68dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_birthdate2">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="25dp"
                    android:background="@drawable/et_login"
                    android:backgroundTint="@color/color1"
                    android:text="@string/rb_male"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/et_login"
                    android:backgroundTint="@color/color1"
                    android:text="@string/rb_female"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="22sp" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_save2"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:backgroundTint="@color/color1"
                android:text="@string/btn_save2"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


</ScrollView>







