<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bacground"
    tools:context=".ProfileClass">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="900dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/btn_save2">

            <TextView
                android:id="@+id/numberlevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/et_login"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/color4"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/tru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/et_login"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/color4"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/Wrong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/et_login"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/color4"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/numberQustion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_login"
                android:gravity="center"
                android:text="TextView"
                android:textColor="@color/color4"
                android:textSize="30dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_birthdate"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_login"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:text="date"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_login"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_email2"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/et_login"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_uname2"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <TextView
            android:id="@+id/et_birthdate2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_login"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:text="date"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="30sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <EditText
            android:id="@+id/et_email2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_login"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_email2"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/et_uname2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/et_login"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/et_uname2"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_login"
            android:backgroundTint="@color/color1"
            android:entries="@array/country"
            android:gravity="center"
            android:scrollbarSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_birthdate"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="373dp"
            android:layout_height="68dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner2">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/et_login"
                android:backgroundTint="@color/color1"
                android:text="@string/rb_male"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/et_login"
                android:backgroundTint="@color/color1"
                android:checked="true"
                android:text="@string/rb_female"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="22sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_save2"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/color1"
            android:text="@string/btn_save2"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <ImageView
            android:id="@+id/edit_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageView
            android:id="@+id/edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_username"
            app:srcCompat="@android:drawable/ic_menu_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>







